--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -79,7 +79,7 @@
   position: absolute;
   width: 1px;
   height: calc(100% - 28px);
-  background: #0f0;
+  background: #eee;
   left: 50%;
   top: 14px;
   content: '';
@@ -138,6 +138,8 @@
   display: block;
   padding: 10px 0;
   white-space: nowrap;
+  font-size: 13px;
+  font-weight: normal;
 }
 
 
