--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -23,6 +23,9 @@
   padding: 0 80px;
 }
 
+.skip-nav { position: relative }
+.skip-nav a { position: absolute; line-height: 50px; background: #f00; color: #fff; top: -50px; }
+.skip-nav a:focus, .skip-nav a:active { top: 0; }
 
 /* fixed 위로 올라가기 */
 .header.fix {
